# OSlabs

./: README.md
Lab1/: CMakeLists.txt
Lab1/Creator/: creator.cpp
Lab1/Main/: Main.cpp
Lab1/Reporter/: reporter.cpp
Lab1/Test/: Test.vcxproj  pch.h  test.cpp
Lab2/: CMakeLists.txt  Lab2.sln
Lab2/Lab2/: Main.cpp  ThreadProcessing.cpp  ThreadProcessing.h
Lab2/Lab2a/: Main.cpp  ThreadProcessing.cpp  ThreadProcessing.h
Lab2/Main/: Main.cpp  Main.vcxproj  Main.vcxproj.filters  ThreadProcessing.h
Lab2/Test/: Test.vcxproj  pch.h  test.cpp  test_winapi.cpp
Lab2/Test/Debug/: Test.exe.recipe  Test.ilk
Lab2/Test/Debug/Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  link.read.1.tlog
Lab2/Test/x64/Debug/Test.tlog/: CopyLocal.write.1u.tlog  Test.lastbuildstate
Lab2/Testa/: Test.vcxproj  pch.h  test_thread.cpp
Lab2/Testa/Debug/: Test.vcxproj.FileListAbsolute.txt
Lab2/Testa/Debug/Test.tlog/: CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Test.lastbuildstate  link.command.1.tlog  link.write.1.tlog
Lab2/Testa/x64/Debug/: Test.exe.recipe  Test.vcxproj.FileListAbsolute.txt
Lab2/Testa/x64/Debug/Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog
Lab3/: CMakeLists.txt
Lab3/threads/: CMakeLists.txt  marker_threads.cpp
Lab3/threads_tests/: CMakeLists.txt  threads_tests.cpp
Lab3/winapi/: CMakeLists.txt  marker_winapi.cpp
Lab3/winapi_tests/: CMakeLists.txt  winapi_tests.cpp
Lab4/: CMakeLists.txt
Lab4/threads/: CMakeLists.txt
Lab4/threads/include/: message_queue.h
Lab4/threads/src/: common.h  message_queue.cpp  receiver.cpp  sender.cpp
Lab4/threads_tests/: CMakeLists.txt
Lab4/threads_tests/src/: tests.cpp
Lab4/winapi/: CMakeLists.txt
Lab4/winapi/include/: message_queue.h
Lab4/winapi/src/: common.h  message_queue.cpp  receiver.cpp  sender.cpp
Lab4/winapi_tests/: CMakeLists.txt
Lab4/winapi_tests/src/: tests.cpp
Lab5/: CMakeLists.txt
Lab5/include/: employee.h
Lab5/threads/: CMakeLists.txt
Lab5/threads-tests/: CMakeLists.txt
Lab5/threads-tests/src/: tests.cpp
Lab5/threads/include/: client.h  server.h
Lab5/threads/src/: client.cpp  client_main.cpp  server.cpp  server_main.cpp
Lab5/winapi/: CMakeLists.txt
Lab5/winapi-tests/: CMakeLists.txt
Lab5/winapi-tests/src/: tests.cpp
Lab5/winapi/include/: client.h  server.h
Lab5/winapi/src/: client.cpp  client_main.cpp  server.cpp  server_main.cpp
